nginx config for serving SimpleSAMLphp endpoints.

--- a/drupal/rootfs/etc/nginx/conf.d/default.conf
+++ b/drupal/rootfs/etc/nginx/conf.d/default.conf
@@ -3,6 +3,21 @@ server {
     server_name drupal;
     root /var/www/drupal/web;
 
+    location ~ ^/simplesaml/(?<moo>.*) {
+        alias /var/www/drupal/vendor/simplesamlphp/simplesamlphp/www;
+
+        location ~ ^/simplesaml(?<phpfile>.+?\.php)(?<pathinfo>/.*)?$ {
+            include          fastcgi_params;
+            fastcgi_pass     unix:/var/run/php-fpm7/php-fpm7.sock;
+            fastcgi_param    SCRIPT_FILENAME $document_root$phpfile;
+            fastcgi_param    SCRIPT_NAME $phpfile;
+            fastcgi_param    DRUPAL_DEFAULT_SITE_URL https://islandora-idc.traefik.me;
+            fastcgi_param    PATH_INFO $pathinfo;
+        }
+
+        try_files /$moo =404;
+    }
+
     location = /favicon.ico {
         log_not_found off;
         access_log off;
@@ -115,7 +130,7 @@ server {
     # Enforce clean URLs
     # Removes index.php from urls like www.example.com/index.php/my-page --> www.example.com/my-page
     # Could be done with 301 for permanent or other redirect codes.
-    if ($request_uri ~* "^(.*/)index\.php(.*)") {
+    if ($request_uri ~* "^(.*/)index\.php/(.*)") {
         return 307 $1$2;
     }
 }
